--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,3 +1,58 @@
+.conteudo-escondido {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.6);
+    width: 375px;
+    height: 667px;
+    z-index: 1;
+    display: flex;
+    justify-content: right;
+}
+.conteudo-escondido > div {
+    width: 259px;
+    height: 667px;
+    background-color: #FFFFFF;
+    display: flex;
+    flex-direction: column;
+}
+
+.conteudo-escondido > div > p {
+    margin: 0 auto;
+    width: 170px;
+    height: 84px;
+    display: flex;
+    justify-content: center;
+    
+    align-items: center;
+    text-align: center;
+
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 100;
+    font-size: 16px;
+    line-height: 19px;
+}
+.perfis, .publico, .reservado{
+    margin: 16px;
+    display: flex;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 19px;
+    display: flex;
+    align-items: center;
+}
+.perfis > ion-icon, .publico > ion-icon, .reservado > ion-icon {
+    font-size: 23px;
+    margin-right: 6px;
+}
+
+
+.bloqueado {
+    display: none;
+}
+
+
 .conteudo {
     position: relative;
     width: 375px;
@@ -7,6 +62,7 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    
 }
 
 .topo {
@@ -35,7 +91,42 @@
 }
 
 .mensagens {
+    width: 375px;
+    height: 587px;
+    margin-top: 106px;
+    margin-bottom: 80px;
+    overflow-x: hidden;
+    overflow-y: scroll;
     background: #E5E5E5;
+
+    display: block;
+    
+}
+.mensagem-publica {
+    background-color: #FFFFFF;
+    
+}
+.mensagem-privada {
+    background: red;
+    border-radius: 2px;
+}
+.mensagem-status {
+    background: #dcdcdc;
+    border-radius: 2px;
+}
+.mensagem-privada, .mensagem-publica, .mensagem-status {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+    display: flex;
+    align-items: center;
+
+    color: #AAAAAA;
+    padding: 20px 0px;
+    margin-bottom: 10px;
+    margin-left: 5px;
 }
 .enviar {
     position: absolute;
